Updated ?/??/2007 - Version 2.00 - in sync with DAoC 1.88

  

  Aproximate the chances of success based on Mythic's half-hearted
  post about chances to blow up.  Our approximation is full of .5%
  rounding errors (in both directions), which shouldn't make a big 
  difference.  The chance to succeed (and not blow up) appears to be
    34% + ItemQualModifier (6% to 26%) - OCPenalty(10 to 70%) 
        + SkillBonus (0% to 100%) - (SkillBonus - 100%) * OCPenalty / 2
  so 1000 skill crafters aren't affected, while the younger the crafter,
  with the larger the overcharge, the more the penalty affects them (a
  level 1 toon doing a 5 point overcharge would suffer a full 35% penalty 
  on top of the old formula, with a -45% (impossible) chance of success).

  Touched up layout of Ethinarg's search results view, the list
  now shows the item name as clickable link (instead of seperate
  "Add to Template" link) to add the item.

  Solved loading and switching outfits, loading a template
  now shows the selected outfit and each outfit's selected
  items correctly.

  Default to the first non-All Magic, non-All Melee skill
  so the user can enter an amount before choosing a skill.
  (All Magic/All Melee are restricted to an amount of 1).

  Fixed Ethinarg 'Add Item to Template' to display the slot
  choice for non-ring/wrist/weapon slots.

  Save new DaocIniPath in preferences (important for users
  not on an actual game PC.)  Select the first toon to help
  users who are often confused at first.  The display now
  shows the client (it digs 2 directories deep from the .ini
  files path to find them all).

  Akatsuki moved from the GOA/Euro list to the US list with
  their new server number, for exporting gems.  Updated all
  of the euro server numbers.

Updated 3/30/2007 - Version 1.99 - catch up to DAoC 1.88

  Search Ethinarg's Database grew a quickbar button.  It also 
  pops up a window prompting the user to choose a spot to stick 