@@ -450,15 +450,18 @@ capIncreaseList = t2(dropStatList + (
 otherBonusList = t2((
     '% Power Pool',
     'AF',
-    'Archery and Spell Damage',
-    'Archery and Spell Range',
-    'Archery and Casting Speed',
+    'Archery Damage',
+    'Archery Range',
+    'Archery Speed',
+    'Casting Speed',
     'Duration of Spells',
     'Fatigue',
     'Healing Effectiveness',
     'Melee Damage',
     'Melee Combat Speed',
+    'Spell Damage',
     'Spell Piercing',
+    'Spell Range',
     'Stat Buff Effectiveness',
     'Stat Debuff Effectiveness',
     'Style Damage',
@@ -753,8 +756,9 @@ CraftedValuesLists = d2({
     'Other Bonus' : d2({
         '% Power Pool' :   t2(('5',)),
         'AF' :             t2(('10',)),
-        'Archery and Spell Damage' : t2(('2',)),
+        'Archery Damage' : t2(('2',)),
         'Melee Damage' :   t2(('2',)),
+        'Spell Damage' :   t2(('2',)),
         'Duration of Spells' :      t2(('5',)),
         'Healing Effectiveness' :   t2(('5',)),
         'Stat Buff Effectiveness' : t2(('5',)),
@@ -788,8 +792,9 @@ CraftedLists = {
     'Other Bonus' : t2((
         '% Power Pool',
         'AF',
-        'Archery and Spell Damage',
+        'Archery Damage',
         'Melee Damage',
+        'Spell Damage',
         'Duration of Spells',
         'Healing Effectiveness',
         'Stat Buff Effectiveness',
@@ -1246,25 +1251,19 @@ FixEffectsTable = d2({
     'Archery Skill Bonus' :         'All Archery Skills',
 
     'AF Bonus' :               'AF',
-    'Archery Damage Bonus' :   'Archery and Spell Damage',
-    'Archery Damage' :         'Archery and Spell Damage',
-    'Spell Damage' :           'Archery and Spell Damage',
-    'Spell Damage Bonus' :     'Archery and Spell Damage',
-    'Magic Damage' :           'Archery and Spell Damage',
-    'Archery Range' :          'Archery and Spell Range',
-    'Archery Range Bonus' :    'Archery and Spell Range',
-    'Casting Range' :          'Archery and Spell Range',
-    'Spell Range' :            'Archery and Spell Range',
-    'Spell Range Bonus' :      'Archery and Spell Range',
-    'Archery Speed' :          'Archery and Casting Speed',
-    'Archery Speed Bonus' :    'Archery and Casting Speed',
-    'Casting Speed' :          'Archery and Casting Speed',
-    'Casting Speed Bonus' :    'Archery and Casting Speed',
+    'Archery Damage Bonus' :   'Archery Damage',
+    'Archery Range Bonus' :    'Archery Range',
+    'Archery Speed Bonus' :    'Archery Speed',
     'Buff Bonus' :             'Stat Buff Effectiveness',
+    'Casting Range' :          'Spell Range',
+    'Casting Speed Bonus' :    'Casting Speed',
     'Debuff Bonus' :           'Stat Debuff Effectiveness',
     'Defensive Bonus' :        'Defensive',
     'Healing Bonus' :          'Healing Effectiveness',
+    'Spell Damage Bonus' :     'Spell Damage',
+    'Magic Damage' :           'Spell Damage',
     'Spell Duration Bonus' :   'Duration of Spells',
+    'Spell Range Bonus' :      'Spell Range',
     'Style Damage Bonus' :     'Style Damage',
     'Melee Damage Bonus' :     'Melee Damage',
     'Melee Speed Bonus' :      'Melee Combat Speed',   
